/**
 * Copyright 2018-2019 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

message Video {
  oneof src {
    // The data in Base64 format.
    string data = 1;

    // A url pointing to a video file
    string url = 4;
  }

  enum Type {
    UNUSED = 0;  // This should always exist.
    NATIVE = 1;
    YOUTUBE_IFRAME = 2;
  }

  Type type = 5;

  // The type attribute of the HTML <video> tag's <source> subtag.
  // ex: "video/mp4"
  string format = 2;

  // The currentTime attribute of the HTML <video> tag's <source> subtag.
  int32 start_time = 3;
}
